--- a/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
@@ -5,7 +5,7 @@
     <div class="modal-body">
         <div></div>
         <div class="alert alert-warning"> Share my information <strong>only</strong> for specified purposes of use. </div>
-        <button class="btn btn-primary btn-xs" ng-click="selectAll()">Select All</button> <button class="btn btn-primary btn-xs" ng-click="deselectAll()">Deselect All</button>
+        <button class="btn btn-primary btn-xs dark-green" ng-click="selectAll()">Select All</button> <button class="btn btn-primary btn-xs dark-green" ng-click="deselectAll()">Deselect All</button>
         <div class="row">
             <div class="col-sm-6">
                 <div ng-repeat="purposeOfUse in data">
@@ -24,6 +24,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white m-r-xs" ng-click="cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="ok()">Save changes</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="ok()">Save changes</button>
     </div>
 </div>
