--- a/client/app/consent/tmpl/consent-card.tpl.html
+++ b/client/app/consent/tmpl/consent-card.tpl.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12 relative">
-        <div class="ibox panel panel-success float-e-margins statusIcon_saved">
+        <div class="ibox panel panel-success float-e-margins" ng-class="{'statusIcon_saved': ConsentCardVm.consentState() === 'saved','statusIcon_signed': ConsentCardVm.consentState() === 'signed','statusIcon_revoked': ConsentCardVm.consentState() === 'revoked'}">
             <div class="ibox-title panel-heading left-padding55 right-padding30">
                 <div class="chevron_absolute">
                     <div ibox-tools init-collapsed="true"></div>
@@ -9,7 +9,7 @@
                 <div class="row">
                     <!--<div ibox-tools init-collapsed="true"></div>-->
                     <div class="col-sm-4 col-sm-push-8 col-xs-12">
-                        <p class="">Effective Dates: <strong><span ng-bind="(consent.consentStart | date) + ' - ' + (consent.consentEnd | date)"/></strong>
+                        <p class="">Effective Dates: <strong><span ng-bind="(ConsentCardVm.consent.consentStart | date) + ' - ' + (ConsentCardVm.consent.consentEnd | date)"/></strong>
                         </p>
                     </div>
 
@@ -19,13 +19,13 @@
                                 <p class="m-b-xxs">Authorized to share:
                                 </p>
 
-                                <p><strong><span ng-repeat="discloseName in consent.toDiscloseName" ng-bind="discloseName"/></strong>
+                                <p><strong><span ng-repeat="discloseName in ConsentCardVm.consent.toDiscloseName" ng-bind="discloseName"/></strong>
                                 </p>
                             </div>
                             <div class="col-sm-6">
                                 <p class="m-b-xxs">Sharing with:</p>
 
-                                <p><strong><span ng-repeat="madeToName in consent.isMadeToName" ng-bind="madeToName"/></strong>
+                                <p><strong><span ng-repeat="madeToName in ConsentCardVm.consent.isMadeToName" ng-bind="madeToName"/></strong>
                                 </p>
                             </div>
                         </div>
@@ -36,33 +36,32 @@
 
             <div class="ibox-content modified">
                 <div class="pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
-                            <span>
-                                Consent State: <span class="bold"
-                                                     ng-bind="ConsentCardVm.consentState(consent) | uppercase"/>
-                            </span>
+                    <span>
+                        Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState() | uppercase"/>
+                    </span>
                 </div>
 
                 <div class="row">
                     <div class="col-md-6 m-b">
-                        <div ng-if="ConsentCardVm.isShareAll(consent)">
-                            <h3 class="border-bottom-red">Sharing all medical information:</h3>
+                        <div ng-if="ConsentCardVm.isShareAll()">
+                            <h3 class="border-bottom-blue">Sharing all medical information:</h3>
                             All my medical information can be shared.
                         </div>
-                        <div ng-if="!ConsentCardVm.isShareAll(consent)">
+                        <div ng-if="!ConsentCardVm.isShareAll()">
                             <h3 class="border-bottom-red">Medical Information NOT disclosed:</h3>
 
-                            <p><span ng-bind="ConsentCardVm.notDisclosedItems(consent)"/></p>
+                            <p><span ng-bind="ConsentCardVm.notDisclosedItems()"/></p>
                         </div>
                     </div>
                     <div class="col-md-6 m-b">
                         <h3 class="border-bottom-blue">Share for following purposes:</h3>
 
-                        <p><span ng-bind="ConsentCardVm.purposeOfUseItems(consent)"/></p>
+                        <p><span ng-bind="ConsentCardVm.purposeOfUseItems()"/></p>
                     </div>
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal(consent)">Manage
+                    <button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal()">Manage
                         Consent
                     </button>
                 </div>
