Fix contrast error for manage consent button, consent state bar
#7175 - Implement list consent UI

--- a/client/app/consent/tmpl/consent-card.tpl.html
+++ b/client/app/consent/tmpl/consent-card.tpl.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="ibox-content modified">
-                <div class="pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
+                <div class="btn-grey pp-block-text-bar pp-block-text-bar_sm pp-block-text-bar_default">
                     <span>
                         Consent State: <span class="bold" ng-bind="ConsentCardVm.consentState() | uppercase"/>
                     </span>
@@ -61,7 +61,7 @@
                 </div>
 
                 <div>
-                    <button class="btn btn-primary" ng-click="ConsentCardVm.openManageConsentModal()">Manage
+                    <button class="btn btn-primary dark-green" ng-click="ConsentCardVm.openManageConsentModal()">Manage
                         Consent
                     </button>
                 </div>
