--- a/client/app/provider/tmpl/provider-delete-modal.tpl.html
+++ b/client/app/provider/tmpl/provider-delete-modal.tpl.html
@@ -7,6 +7,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white" ng-click="cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary" ng-click="ok()">Delete</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="ok()">Delete</button>
     </div>
 </div>
