Change the name of the consent object to reflect the DTO in the backend. Add notification  in the create consent directives.
#7178 - Implement create consent UI

--- a/client/app/consent/tmpl/consent-create-edit.tpl.html
+++ b/client/app/consent/tmpl/consent-create-edit.tpl.html
@@ -1,4 +1,4 @@
-<form action="" name="consentForm">
+<form name="consentForm">
     <div class="row">
         <div class="col-md-10">
             <h1> I, Bob, hereby authorize... </h1>
