--- a/client/common/tmpl/ibox_tools.tpl.html
+++ b/client/common/tmpl/ibox_tools.tpl.html
@@ -1,4 +1,4 @@
 <div class="ibox-tools dropdown" dropdown >
    <span class="badge green-white badge-primary badge-icon" ng-bind="total"></span>
-    <a ng-click="showhide()"> <i class="fa" ng-class="{'fa-chevron-up': !initializeCollapsed, 'fa-chevron-down': initializeCollapsed}"></i></a>
+    <a ng-click="toggleCollapsed()"> <i class="fa" ng-class="{'fa-chevron-up': !ppCollapsed, 'fa-chevron-down': ppCollapsed}"></i></a>
 </div>
