--- a/client/app/consent/tmpl/consent-create.tpl.html
+++ b/client/app/consent/tmpl/consent-create.tpl.html
@@ -1,4 +1,9 @@
 
 <content-wrapper title="Create Consent">
-    <create-consent></create-consent>
+    <create-consent
+            providers="CreateEditConsentVm.providers"
+            purposeofuse="CreateEditConsentVm.purposeOfUse"
+            medicalsections="CreateEditConsentVm.medicalSections"
+            sensitivitypolicies="CreateEditConsentVm.sensitivityPolicies"
+            consent="CreateEditConsentVm.consent"></create-consent>
 </content-wrapper>
