--- a/client/app/consent/tmpl/consent-select-provider.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider.tpl.html
@@ -3,7 +3,7 @@
         <div ng-bind="SelectProviderVm.fieldplaceholder"></div>
     </div>
     <div class="panel-body">
-        <div class="m-l" ng-if="SelectProviderVm.selectedProvider">
+        <div class="m-l" ng-if="SelectProviderVm.selectedProvider.npi">
             <span class="fa fa-user info-blue m-r-xs m-b-xs"></span>
             <span ng-bind="SelectProviderVm.selectedProvider | pcmProviderNameOrFacility"></span>
         </div>
