--- a/client/app/healthinformation/tmpl/demographics.tpl.html
+++ b/client/app/healthinformation/tmpl/demographics.tpl.html
@@ -9,13 +9,15 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <p>
-                            <label for="patientName">Patient Name:</label> <span ng-bind="patientdemographics.Names[0].GivenName" id="patientName"></span>
+                            <label for="patientName">Patient Name:</label> <span
+                                ng-bind="patientdemographics.Names.GivenName" id="patientName"></span>
                         </p>
                         <p>
                             <label for="patientSSN">SSN: </label> <span ng-bind="patientdemographics.SSN" id="patientSSN"></span>
                         </p>
                         <p>
-                            <label for="patientSex">Sex: </label> <span ng-bind="patientdemographics.AdministrativeGender.DisplayName" id="patientSex"></span>
+                            <label for="patientSex">Sex: </label> <span
+                                ng-bind="patientdemographics.AdministrativeGender.displayName" id="patientSex"></span>
                         </p>
                         <p>
                             <label for="patientDOB">Birthdate: </label> <span ng-bind="patientdemographics.BirthDate" id="patientDOB"></span>
