--- a/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-purpose-of-use-modal.tpl.html
@@ -1,4 +1,4 @@
-<div class="inmodal">
+<div class="inmodal" ng-form name="purposeOfUseModalObj">
     <div class="modal-header">
         <h4 class="modal-title">Share for selected purpose only</h4>
     </div>
@@ -24,6 +24,6 @@
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-white m-r-xs" ng-click="cancel()">Cancel</button>
-        <button type="button" class="btn btn-primary dark-green" ng-click="ok()">Save changes</button>
+        <button type="button" class="btn btn-primary dark-green" ng-click="ok()" ng-disabled="purposeOfUseModalObj.$pristine">Save changes</button>
     </div>
 </div>
