--- a/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
+++ b/client/app/consent/tmpl/consent-select-provider-modal.tpl.html
@@ -1,13 +1,13 @@
 <div class="inmodal">
     <div class="modal-header">
-        <h4 class="modal-title"> <span ng-bind="title"></span></h4>
+        <h1 class="modal-title"><strong> <span ng-bind="title"></span></strong></h1>
     </div>
     <div class="modal-body">
                 <p ng-if="title === 'Authorize'">Please select <strong>one</strong> individual or organization authorized to share your information:</p>
                 <p ng-if="title === 'Disclosure'">Please select <strong>one</strong> individual or organization for disclosure:</p>
                 <div class="row">
                     <div class="col-sm-12 m-b-xs">
-                        <h3>Individuals:</h3>
+                        <h2><strong>Individuals:</strong></h2>
                         <div ng-repeat="provider in providers">
                                 <div ng-if="isIndividualProvider(provider)">
                                     <div class="radio">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 m-b-md">
-                        <h3>Organization:</h3>
+                        <h2><strong>Organization:</strong></h2>
                         <div ng-repeat="provider in providers">
                             <div ng-if="isOrganizationProvider(provider)">
                                 <div class="radio">
