Enable html5 mode in Angular UI routes and add server side configuration to support it
#7346: User (patient) can login to the patient portal to access the PHR API

--- a/client/app/consent/tmpl/consent-card-list.tpl.html
+++ b/client/app/consent/tmpl/consent-card-list.tpl.html
@@ -2,7 +2,7 @@
     <div class="col-sm-12">
         <div class="ibox float-e-margins margin-bottom-10">
             <p>
-                <a class="btn btn-primary dark-green" ui-sref="consent.create">
+                <a class="btn btn-primary dark-green" ui-sref="fe.consent.create">
                     Add a Consent
                 </a>
             </p>
@@ -28,7 +28,7 @@
 <div class="row" ng-if="!ConsentCardListVm.hasConsents()">
     <div class="col-sm-12">
         <div class="alert alert-danger">
-            There are currently no Consents available. Please click the <a class="alert-link" ui-sref="consent.create">Add a Consent</a> button to create a new consent.
+            There are currently no Consents available. Please click the <a class="alert-link" ui-sref="fe.consent.create">Add a Consent</a> button to create a new consent.
         </div>
     </div>
 </div>
