--- a/client/app/home/tmpl/home.tpl.html
+++ b/client/app/home/tmpl/home.tpl.html
@@ -21,7 +21,7 @@
                 <strong>To view your Health Information, please click the button. </strong>
                 <br> <br>
                 <p>
-                    <a class="btn btn-primary dark-green" ui-sref="patient.healthinformation({scrollTo:'none',expand:'none' })" ng-click="AppVm.showHealthInformationMenu()">
+                    <a class="btn btn-primary dark-green" ui-sref="fe.patient.healthinformation({scrollTo:'none',expand:'none' })" ng-click="AppVm.showHealthInformationMenu()">
                         <span class="hidden-xs">View </span>Health Information
                     </a>
                 </p>
