--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
 
     <title page-title>Test Bed</title>
 
+    <base href="/">
+
     <!-- INSPINIA RELATED CSS START -->
     <!-- Font awesome --> 
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
