--- a/client/app/provider/tmpl/provider-list.tpl.html
+++ b/client/app/provider/tmpl/provider-list.tpl.html
@@ -4,7 +4,7 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins margin-bottom-10">
                 <p>
-                    <a class="btn btn-primary dark-green" ui-sref="provider.lookup">
+                    <a class="btn btn-primary dark-green" ui-sref="fe.provider.lookup">
                         Add a Health Provider
                     </a>
                 </p>
