--- a/client/app/consent/tmpl/consent-list-manage-options-modal-saved.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-saved.tpl.html
@@ -8,8 +8,8 @@
             <h3>I want to:</h3>
             <div class="list-group">
                 <a href="#" class="list-group-item" ng-click="ManageConsentModalVm.edit()"><h4><i class="fa fa-edit fa-lg m-r-sm"></i>Edit This Consent</h4></a>
-                <a href="#" class="list-group-item"><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
-                <a href="#" class="list-group-item"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
+                <a href="#" class="list-group-item" ng-click="ManageConsentModalVm.preview()" ><h4><i class="fa fa-search fa-lg m-r-sm"></i>Preview This Consent</h4></a>
+                <a href="#" class="list-group-item" ng-click="ManageConsentModalVm.signConsent()"><h4><i class="fa fa-mail-forward fa-lg m-r-sm"></i>Submit My Consent for Signing</h4></a>
                 <a href="#" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
                 <a href="#" class="list-group-item" ng-click="ManageConsentModalVm.toggleDeleteConfirmation()"><h4><i class="fa fa-trash-o fa-lg m-r-sm"></i>Delete This Consent</h4></a>
             </div>
