Add trustASHTML filter for ngBindHtml.
# 7350 -Implement Adobe e-Sign into Consent Management

--- a/client/app/consent/tmpl/consent-sign-revoke.tpl.html
+++ b/client/app/consent/tmpl/consent-sign-revoke.tpl.html
@@ -1,6 +1,6 @@
 <content-wrapper title="Sign Revoke Consent">
 
-    <div ng-bind-html="SignRevokeConsentVm.javascriptCode"/>
+    <div ng-bind-html="SignRevokeConsentVm.javascriptCode|trustAsHTML"/>
 
 </content-wrapper>
 
