--- a/client/app/consent/tmpl/consent-sign.tpl.html
+++ b/client/app/consent/tmpl/consent-sign.tpl.html
@@ -1,6 +1,6 @@
 <content-wrapper title="Sign Consent">
 
-    <div ng-bind-html="SignConsentVm.javascriptCode"/>
+    <div ng-bind-html="SignConsentVm.javascriptCode|trustAsHTML"/>
 
 </content-wrapper>
 
