Add Close Button on Consent Sign & Revoke Page
# 7350 -Implement Adobe e-Sign into Consent Management
(cherry picked from commit c89d817)

--- a/client/app/consent/tmpl/consent-sign-revoke.tpl.html
+++ b/client/app/consent/tmpl/consent-sign-revoke.tpl.html
@@ -1,7 +1,13 @@
 <content-wrapper title="Sign Revoke Consent">
 
-    <div ng-bind-html="SignRevokeConsentVm.javascriptCode|trustAsHTML"/>
+    <div ng-bind-html="SignRevokeConsentVm.javascriptCode" style="height: 700px"/>
 
+    <div class= "navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
+            <p class="navbar-text pull-left">If you have finished signing this Consent or wish to cancel, please click the Close button to exit this window.</p>
+            <button type="button" class= "navbar-btn btn btn-primary pull-right" ng-click="SignRevokeConsentVm.close()">Close</button>
+        </div>
+    </div>
 </content-wrapper>
 
 
