--- a/client/app/consent/tmpl/consent-sign-revoke.tpl.html
+++ b/client/app/consent/tmpl/consent-sign-revoke.tpl.html
@@ -1,6 +1,6 @@
 <content-wrapper title="Sign Revoke Consent">
 
-    <div ng-bind-html="SignRevokeConsentVm.javascriptCode" style="height: 700px"/>
+    <div ng-bind-html="SignRevokeConsentVm.javascriptCode |trustAsHTML" style="height: 600px"/>
 
     <div class= "navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
