Implement UAA integration to patient portal UI using oauth-ng and Cloud Foundry UAA
#7346: User (patient) can login to the patient portal to access the PHR API

--- a/client/app/access/tmpl/login.tpl.html
+++ b/client/app/access/tmpl/login.tpl.html
@@ -22,34 +22,19 @@
                             </div>
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
-                                    <form class="form-horizontal m-t" role="form" >
-                                        <h2 class="font-bold">Register Today!</h2>
-                                        <small> To register for the HIE Patient Portal, please contact your provider’s and ask about an HIE Patient Portal Account.</small>
-                                        <div class="form-group m-t">
-                                            <div class="">
-                                                <label class="col-lg-4 control-label no-padding-right" for="userName">User name</label>
-                                                <div class="col-lg-8">
-                                                    <input type="text" class=" form-control" id="userName" placeholder="Username" data-ng-model="loginVm.loginData.userName" required autofocus>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                           <div class="">
-                                               <label class="col-lg-4 control-label no-padding-right" for="password">Password</label>
-                                               <div class="col-lg-8">
-                                                   <input type="password" id="password" class="form-control" placeholder="Password" data-ng-model="loginVm.loginData.password" required>
-                                               </div>
-                                           </div>
-                                        </div>
-                                        <button type="submit" class="btn btn-primary dark-green block full-width m-b" data-ng-click="loginVm.login()">Login</button>
-                                        <div data-ng-hide="message == ''" class=" text-center has-error">
-                                            <span class="control-label">{{::loginVm.message}}</span>
-                                        </div>
-                                        <p class="text-muted text-center">
-                                            <br/>
-                                            <a href=""> <small>Forgot password?</small> </a>
-                                        </p>
-                                    </form>
+                                    <h2 class="font-bold">Register Today!</h2>
+                                    <small> To register for the HIE Patient Portal, please contact your provider’s and ask about an HIE Patient Portal Account.</small>
+                                    <div class="m-t text-center">
+                                        <oauth
+                                                site="{{AppVm.oauth.site}}"
+                                                client-id="{{AppVm.oauth.clientId}}"
+                                                redirect-uri="{{AppVm.oauth.redirectUri}}"
+                                                profile-uri="{{AppVm.oauth.profileUri}}"
+                                                scope="{{AppVm.oauth.scope}}"
+                                                template="{{AppVm.oauth.template}}"
+                                                state="{{AppVm.oauth.state}}">
+                                        </oauth>
+                                    </div>
                                     <p class="m-t text-center"> Version: {{::loginVm.version}} </p>
                                 </div>
                             </div>
