--- a/client/common/tmpl/topnavbar.tpl.html
+++ b/client/common/tmpl/topnavbar.tpl.html
@@ -18,9 +18,18 @@
                     </span>
                     </li>
                     <li>
-                        <a class="dark-grey" href="" ng-click="AppVm.logOut();">
+                        <oauth
+                                site="{{AppVm.oauth.site}}"
+                                client-id="{{AppVm.oauth.clientId}}"
+                                redirect-uri="{{AppVm.oauth.redirectUri}}"
+                                profile-uri="{{AppVm.oauth.profileUri}}"
+                                scope="{{AppVm.oauth.scope}}"
+                                template="{{AppVm.oauth.template}}"
+                                state="{{AppVm.oauth.state}}">
+                        </oauth>
+                        <!--<a class="dark-grey" href="" ng-click="AppVm.logOut();">
                             <i class="fa fa-sign-out"></i> Log out
-                        </a>
+                        </a>-->
                     </li>
                 </ul>
             </div>
