Set patient portal base path to pp-ui in index.html
#7346: User (patient) can login to the patient portal to access the PHR API

--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
     <title page-title>Test Bed</title>
 
-    <base href="/">
+    <base href="/pp-ui/">
 
     <!-- INSPINIA RELATED CSS START -->
     <!-- Font awesome --> 
