Fix typos on login page
#Bug 7484: Landing Page :: Typos

--- a/client/app/access/tmpl/login.tpl.html
+++ b/client/app/access/tmpl/login.tpl.html
@@ -18,12 +18,12 @@
                     <div class="loginColumns animated fadeInDown custom-login-column modified">
                         <div class="row">
                             <div class="col-md-5">
-                                <h1 class="font-bold">Take control of your health and well being with the HIE Patient Portal.</h1>
+                                <h1 class="font-bold">Take control of your health and well-being with the HIE Patient Portal.</h1>
                             </div>
                             <div class="col-md-7 skin-1">
                                 <div class="ibox-content img-circle">
                                     <h2 class="font-bold">Register Today!</h2>
-                                    <small> To register for the HIE Patient Portal, please contact your provider’s and ask about an HIE Patient Portal Account.</small>
+                                    <small> To register for the HIE Patient Portal, please contact your provider and ask about an HIE Patient Portal Account.</small>
                                     <div class="m-t text-center">
                                         <oauth
                                                 site="{{AppVm.oauth.site}}"
