Implement skeleton for trymypolicy.tpl.html page & enable modal menu button
#7497 - Implement the Try-My-Policy UI

--- a/client/app/consent/tmpl/consent-list-manage-options-modal-signed.tpl.html
+++ b/client/app/consent/tmpl/consent-list-manage-options-modal-signed.tpl.html
@@ -8,7 +8,7 @@
         <div class="list-group">
             <a href="" class="list-group-item"><h4><i class="fa fa-folder-open-o fa-lg m-r-sm"></i>View Signed Consent</h4></a>
             <a href="" class="list-group-item"><h4><i class="fa fa-file-text-o fa-lg m-r-sm"></i>Export to XACML</button></h4></a>
-            <a href="" class="list-group-item"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
+            <a href="" class="list-group-item" ui-sref="fe.consent.trymypolicy"><h4><i class="fa fa-gear fa-lg m-r-sm"></i>Try My Consent Settings against My Medical Record before Sharing</h4></a>
             <a href="" class="list-group-item" ng-click="ManageConsentModalVm.revoke()"><h4><i class="fa fa-times fa-lg m-r-sm"></i>Withdrawal</h4></a>
         </div>
     </div>
