--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -77,6 +77,43 @@
     <% scripts.forEach( function ( file ) { %>
     <script type="text/javascript" src="<%= file %>"></script>
     <% }); %>
+
+    <!-- angular -->
+<script src="common/services/services.js" type="text/javascript"></script>
+<script src="common/services/notificationService.js" type="text/javascript"></script>
+<script src="common/services/authenticationService.js" type="text/javascript"></script>
+<script src="common/services/authInterceptorService.js" type="text/javascript"></script>
+<script src="common/filters/filters.js" type="text/javascript"></script>
+<script src="common/directives/directives.js" type="text/javascript"></script>
+<script src="app/provider/services/providerServices.js" type="text/javascript"></script>
+<script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
+<script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
+<script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
+<script src="app/home/controllers/home.js" type="text/javascript"></script>
+<script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
+<script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
+<script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
+<script src="app/consent/consent.module.js" type="text/javascript"></script>
+<script src="app/consent/services/consentServices.js" type="text/javascript"></script>
+<script src="app/consent/directives/selectProviderDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/revokeConsentDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/purposeOfUseDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/medicalInformationDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/createConsentDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/consentTermDirectives.js" type="text/javascript"></script>
+<script src="app/consent/directives/consentDirectives.js" type="text/javascript"></script>
+<script src="app/consent/directives/consentCardDirective.js" type="text/javascript"></script>
+<script src="app/consent/directives/ConsentCardListDirective.js" type="text/javascript"></script>
+<script src="app/consent/controllers/consentController.js" type="text/javascript"></script>
+<script src="app/consent/controllers/SignRevokeConsentController.js" type="text/javascript"></script>
+<script src="app/consent/controllers/SignConsentController.js" type="text/javascript"></script>
+<script src="app/consent/controllers/CreateEditConsentController.js" type="text/javascript"></script>
+<script src="app/consent/controllers/ConsentListController.js" type="text/javascript"></script>
+<script src="app/consent/config/consent.config.js" type="text/javascript"></script>
+<script src="app/config/config.js" type="text/javascript"></script>
+<script src="app/app.js" type="text/javascript"></script>
+<script src="app/access/controllers/login.js" type="text/javascript"></script>
+<!-- endangular -->
 
 </body>
 </html>
