Rename files in the consent and home modules to reflect John Papa naming convention.
 #7178 - Implement create consent UI

--- a/client/index.html
+++ b/client/index.html
@@ -89,26 +89,26 @@
 <script src="app/provider/filters/providerFilters.js" type="text/javascript"></script>
 <script src="app/provider/directives/providerDirectives.js" type="text/javascript"></script>
 <script src="app/provider/controllers/providerController.js" type="text/javascript"></script>
-<script src="app/home/controllers/home.js" type="text/javascript"></script>
+<script src="app/home/home.module.js" type="text/javascript"></script>
+<script src="app/home/controllers/home.controller.js" type="text/javascript"></script>
+<script src="app/home/config/home.config.js" type="text/javascript"></script>
 <script src="app/healthinformation/services/healthInformationService.js" type="text/javascript"></script>
 <script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
 <script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
-<script src="app/consent/services/consentServices.js" type="text/javascript"></script>
-<script src="app/consent/directives/selectProviderDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/revokeConsentDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/purposeOfUseDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/medicalInformationDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/createConsentDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/consentTermDirectives.js" type="text/javascript"></script>
-<script src="app/consent/directives/consentDirectives.js" type="text/javascript"></script>
-<script src="app/consent/directives/consentCardDirective.js" type="text/javascript"></script>
-<script src="app/consent/directives/ConsentCardListDirective.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consentController.js" type="text/javascript"></script>
-<script src="app/consent/controllers/SignRevokeConsentController.js" type="text/javascript"></script>
-<script src="app/consent/controllers/SignConsentController.js" type="text/javascript"></script>
-<script src="app/consent/controllers/CreateEditConsentController.js" type="text/javascript"></script>
-<script src="app/consent/controllers/ConsentListController.js" type="text/javascript"></script>
+<script src="app/consent/services/consent.services.js" type="text/javascript"></script>
+<script src="app/consent/directives/select-provider.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/revoke-consent.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/purpose-of-use.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/medical-information.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/create-consent.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/consent-term.directives.js" type="text/javascript"></script>
+<script src="app/consent/directives/consent-card.directive.js" type="text/javascript"></script>
+<script src="app/consent/directives/consent-card-list.directive.js" type="text/javascript"></script>
+<script src="app/consent/controllers/sign-revoke-consent.controller.js" type="text/javascript"></script>
+<script src="app/consent/controllers/sign-consent.controller.js" type="text/javascript"></script>
+<script src="app/consent/controllers/create-edit-consent.controller.js" type="text/javascript"></script>
+<script src="app/consent/controllers/consent-list.controller.js" type="text/javascript"></script>
 <script src="app/consent/config/consent.config.js" type="text/javascript"></script>
 <script src="app/config/config.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
