--- a/client/index.html
+++ b/client/index.html
@@ -108,7 +108,7 @@
 <script src="app/consent/controllers/sign-revoke-consent.controller.js" type="text/javascript"></script>
 <script src="app/consent/controllers/sign-consent.controller.js" type="text/javascript"></script>
 <script src="app/consent/controllers/create-edit-consent.controller.js" type="text/javascript"></script>
-<script src="app/consent/controllers/consent-list.controller.js" type="text/javascript"></script>
+<script src="app/consent/controllers/consent-list-controller.js" type="text/javascript"></script>
 <script src="app/consent/config/consent.config.js" type="text/javascript"></script>
 <script src="app/config/config.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
