--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -36,6 +36,10 @@
                 <a ui-sref="fe.provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span></a>
             </li>
 
+            <li ng-class="{active: $state.includes('fe.provider')}" >
+                <a ui-sref="fe.clinicaldocuments.list"><i class="fa fa-user-md"></i> <span class="nav-label">Clinical Documents</span></a>
+            </li>
+
             <li ng-class="{active: $state.includes('fe.patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()">
                 <a href=""><i class="fa fa-stethoscope"></i> <span class="nav-label"> Health Information</span> <span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level" ng-class="{'in': ($state.includes('fe.patient') )}">
