--- a/client/app/consent/config/consentSignRevoke.tpl.html
+++ b/client/app/consent/config/consentSignRevoke.tpl.html
@@ -1,11 +1,11 @@
 <content-wrapper title="Sign Revoke Consent">
 
-    <div ng-bind-html="SignRevokeConsentVm.javascriptCode |trustAsHTML" style="height: 600px"/>
+    <div ng-bind-html="ConsentSignRevokeVm.javascriptCode |trustAsHTML" style="height: 600px"/>
 
     <div class= "navbar navbar-inverse navbar-fixed-bottom">
         <div class="container">
             <p class="navbar-text pull-left">If you have finished signing this Consent or wish to cancel, please click the Close button to exit this window.</p>
-            <button type="button" class= "navbar-btn btn btn-primary pull-right" ng-click="SignRevokeConsentVm.close()">Close</button>
+            <button type="button" class= "navbar-btn btn btn-primary pull-right" ng-click="ConsentSignRevokeVm.close()">Close</button>
         </div>
     </div>
 </content-wrapper>
