--- a/client/app/consent/config/consentCreateEdit.tpl.html
+++ b/client/app/consent/config/consentCreateEdit.tpl.html
@@ -1,9 +1,9 @@
 
 <content-wrapper title="Create Consent">
-        <create-consent
+        <pp-create-consent
                 providers="ConsentCreateEditVm.providers"
                 purposeofuse="ConsentCreateEditVm.purposeOfUse"
                 medicalsections="ConsentCreateEditVm.medicalSections"
                 sensitivitypolicies="ConsentCreateEditVm.sensitivityPolicies"
-                consent="ConsentCreateEditVm.consent"></create-consent>
+                consent="ConsentCreateEditVm.consent"></pp-create-consent>
 </content-wrapper>
