--- a/client/app/consent/config/consentList.tpl.html
+++ b/client/app/consent/config/consentList.tpl.html
@@ -1,3 +1,3 @@
 <content-wrapper title="List Consents">
-    <consent-card-list consent-list="ConsentListVm.consentList"></consent-card-list>
+    <pp-consent-card-list consent-list="ConsentListVm.consentList"></pp-consent-card-list>
 </content-wrapper>
