--- a/client/app/consent/config/consentRevoke.tpl.html
+++ b/client/app/consent/config/consentRevoke.tpl.html
@@ -1,3 +1,3 @@
 <content-wrapper title="Revoke Consent">
-    <revoke-consent></revoke-consent>
+    <pp-consent-revoke></pp-consent-revoke>
 </content-wrapper>
