Rename medical documents components

--- a/client/app/medicaldocuments/tmpl/medicalDocumentsInfo.tpl.html
+++ b/client/app/medicaldocuments/tmpl/medicalDocumentsInfo.tpl.html
@@ -2,9 +2,9 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="ibox float-e-margins">
-                <h3>Clinical Document Management</h3>
+                <h3>Medical Document Management</h3>
                 <br/>
-                <p>Choose to upload your electronic Clinical Documents.</p>
+                <p>Choose to upload your electronic Medical Documents.</p>
             </div>
         </div>
     </div>
@@ -13,11 +13,11 @@
         <div class="col-sm-12">
             <div class="ibox float-e-margins margin-bottom-10">
                 <p>
-                    If you have electronic versions of your Clinical Records, you may upload them here.
+                    If you have electronic versions of your Medical Records, you may upload them here.
                 </p>
                 <p>
-                    <a class="btn btn-primary dark-green" ui-sref="fe.clinicaldocuments.upload">
-                        Upload Clinical Documents
+                    <a class="btn btn-primary dark-green" ui-sref="fe.medicaldocuments.upload">
+                        Upload Medical Documents
                     </a>
                 </p>
             </div>
