--- a/client/common/tmpl/navigation.tpl.html
+++ b/client/common/tmpl/navigation.tpl.html
@@ -36,8 +36,8 @@
                 <a ui-sref="fe.provider.list"><i class="fa fa-user-md"></i> <span class="nav-label">Providers</span></a>
             </li>
 
-            <li ng-class="{active: $state.includes('fe.clinicaldocuments')}" >
-                <a ui-sref="fe.clinicaldocuments.info"><i class="fa fa-user-md"></i> <span class="nav-label">Clinical Documents</span></a>
+            <li ng-class="{active: $state.includes('fe.medicaldocuments')}" >
+                <a ui-sref="fe.medicaldocuments.info"><i class="fa fa-user-md"></i> <span class="nav-label">Medical Documents</span></a>
             </li>
 
             <li ng-class="{active: $state.includes('fe.patient')}" ng-if="AppVm.healthInformationMenu" ng-click="AppVm.routeToHealthInformation()">
