--- a/client/app/medicalDocuments/tmpl/medicalDocuments.tpl.html
+++ b/client/app/medicalDocuments/tmpl/medicalDocuments.tpl.html
@@ -1,4 +1,84 @@
 <content-wrapper title="Upload Medical Documents">
-    <pp-clinical-documents-upload ></pp-clinical-documents-upload>
-    <pp-clinical-documents-uploaded-documents></pp-clinical-documents-uploaded-documents>
+    <div class="row">
+        <div class="col-sm-6">
+            <div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="custom-no-margin-top"><i class="fa fa-upload"></i> Upload</h2>
+                    </div>
+                    <div class="panel-body">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input id="name" name="name" type="text" class="form-control" placeholder="Document Name"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="description">Description</label>
+                            <textarea name="description" id="description" rows="4" class="form-control"
+                                      placeholder="Description"></textarea>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="documentType">Clinical Document Type: </label>
+                            <span>Episode Summary Note</span>
+                            <input type="hidden" id="documentType" name="documentType"
+                                   value="Episode Summary Note"/>
+                        </div>
+
+                        <div class="form-group">
+                            <label for="file">Clinical Document</label>
+                            <input type="file" name="file" id="file" required="required"
+                                   class="form-control"/>
+                        </div>
+
+                        <button class="btn btn-primary dark-green" tabindex="0">Upload</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h2 class="custom-no-margin-top"><i class="fa fa-files-o"></i> Uploaded Documents</h2>
+                    </div>
+                    <div class="panel-body">
+                        <table class="table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Document Type</th>
+                                    <th>Description</th>
+                                    <th>Operation</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <span>Name</span>
+                                    </td>
+                                    <td>
+                                        <span>Type</span>
+                                    </td>
+                                    <td>
+                                        <span>Description</span>
+                                    </td>
+                                    <td>
+                                        <a ui-sref="">
+                                            <i class="fa fa-download"></i>
+                                        </a>
+                                        <a ui-sref="">
+                                            <i class="fa fa-times"></i>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <pp-clinical-documents-uploaded-documents></pp-clinical-documents-uploaded-documents>
+    </div>
 </content-wrapper>
