--- a/client/index.html
+++ b/client/index.html
@@ -96,7 +96,7 @@
 <script src="app/healthinformation/directives/healthInformationDirectives.js" type="text/javascript"></script>
 <script src="app/healthinformation/controllers/healthInformationController.js" type="text/javascript"></script>
 <script src="app/consent/consent.module.js" type="text/javascript"></script>
-<script src="app/consent/services/consent.services.js" type="text/javascript"></script>
+<script src="app/consent/services/consent.service.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentTerm.directives.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentRevoke.directive.js" type="text/javascript"></script>
 <script src="app/consent/directives/ppConsentPurposeOfUse.directive.js" type="text/javascript"></script>
