--- a/client/index.html
+++ b/client/index.html
@@ -109,7 +109,7 @@
 <script src="app/consent/controllers/consentSign.controller.js" type="text/javascript"></script>
 <script src="app/consent/controllers/consentList.controller.js" type="text/javascript"></script>
 <script src="app/consent/controllers/consentCreateEdit.controller.js" type="text/javascript"></script>
-<script src="app/consent/config/consent.config.js" type="text/javascript"></script>
+<script src="app/consent/consent.config.js" type="text/javascript"></script>
 <script src="app/config/config.js" type="text/javascript"></script>
 <script src="app/app.js" type="text/javascript"></script>
 <script src="app/access/controllers/login.js" type="text/javascript"></script>
